[package]
name = "hello_macro_derive"
version = "0.1.0"
authors = ["Jon Andoni Galdos <jonandonigaldos1996@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"